syntax = "proto3";
package pb.network.protocol;

option go_package = "github.com/weisyn/v1/pb/network/protocol";

import "pb/blockchain/block/transaction/transaction.proto";

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * ğŸŒ WESäº¤æ˜“ç½‘ç»œä¼ æ’­åè®® - åŒé‡ä¿éšœç½‘ç»œæ¶æ„
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 *
 * æœ¬åè®®å®šä¹‰WESç³»ç»Ÿä¸­äº¤æ˜“çš„ç½‘ç»œä¼ æ’­æœºåˆ¶ï¼Œå®ç°é«˜æ•ˆã€å¯é çš„äº¤æ˜“åˆ†å‘ã€‚
 *
 * ğŸ¯ æ ¸å¿ƒæ¶æ„ï¼š
 * â€¢ ä¸»è¦ä¼ æ’­ï¼šGossipSubè®¢é˜…æ¨¡å¼ï¼ˆfire-and-forgetï¼Œé«˜æ•ˆè¦†ç›–ï¼‰
 * â€¢ å¤‡ä»½ä¼ æ’­ï¼šDirect Streamç›´è¿æ¨¡å¼ï¼ˆç¡®ä¿é€è¾¾ï¼ŒK-bucketé€‰æ‹©ï¼‰
 * â€¢ æ¥æ”¶å»é‡ï¼šåŸºäºäº¤æ˜“å“ˆå¸Œçš„æ™ºèƒ½å»é‡å¤„ç†
 * â€¢ ä¼ æ’­æ§åˆ¶ï¼šè·³æ•°é™åˆ¶ã€TTLç®¡ç†ã€å¾ªç¯é¿å…
 *
 * ğŸ“¡ åè®®æ˜ å°„ï¼š
 * â€¢ GossipSub Topic: "weisyn.transaction.announce.v1"
 * â€¢ Direct Stream: "/weisyn/transaction/direct/1.0.0"
 * â€¢ æ¶ˆæ¯å°è£…ï¼šä½¿ç”¨ pb/network/envelope.proto ä½œä¸ºä¼ è¾“å®¹å™¨
 *
 * ğŸ›¡ï¸ ç½‘ç»œå®‰å…¨ï¼š
 * â€¢ æ¶ˆæ¯ç­¾åï¼šé˜²æ­¢äº¤æ˜“ä¼ æ’­è¢«ç¯¡æ”¹
 * â€¢ å»é‡æœºåˆ¶ï¼šé¿å…ç½‘ç»œæ‹¥å¡å’Œé‡å¤å¤„ç†
 * â€¢ è·³æ•°æ§åˆ¶ï¼šé˜²æ­¢æ— é™ä¼ æ’­å’Œç½‘ç»œé£æš´
 * â€¢ æ¶æ„æ£€æµ‹ï¼šè¯†åˆ«å’Œè¿‡æ»¤æ¶æ„èŠ‚ç‚¹
 *
 * ğŸ”„ äº¤äº’æµç¨‹ï¼š
 * 1. æœ¬åœ°äº¤æ˜“åˆ›å»º â†’ ç­¾åéªŒè¯ â†’ æäº¤å†…å­˜æ± 
 * 2. GossipSubå¹¿æ’­ â†’ å…¨ç½‘è®¢é˜…è€…æ¥æ”¶ â†’ æœ¬åœ°å»é‡éªŒè¯
 * 3. Streamå¤‡ä»½ â†’ K-bucketèŠ‚ç‚¹é€‰æ‹© â†’ ç‚¹å¯¹ç‚¹å¯é ä¼ è¾“
 * 4. æ¥æ”¶å¤„ç† â†’ é‡å¤æ£€æŸ¥ â†’ å†…å­˜æ± ç®¡ç†
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 */

/**
 * TransactionAnnouncement - äº¤æ˜“å¹¿æ’­é€šå‘Š
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šé€šè¿‡GossipSubè¿›è¡Œé«˜æ•ˆçš„å…¨ç½‘äº¤æ˜“å¹¿æ’­
 *
 * ğŸ“¡ ä¼ æ’­æœºåˆ¶ï¼š
 * - ä¼ æ’­æ–¹å¼ï¼šGossipSubè®¢é˜…æ¨¡å¼ï¼Œfire-and-forget
 * - ä¸»é¢˜åç§°ï¼šweisyn.transaction.announce.v1
 * - è¦†ç›–èŒƒå›´ï¼šè®¢é˜…è¯¥ä¸»é¢˜çš„æ‰€æœ‰èŠ‚ç‚¹
 * - ä¼ æ’­æ•ˆç‡ï¼šO(log N)å¤æ‚åº¦ï¼Œå¿«é€Ÿå…¨ç½‘è¦†ç›–
 *
 * ğŸ”§ æ¶ˆæ¯ç»“æ„ï¼š
 * - äº¤æ˜“æ‘˜è¦ï¼šåŒ…å«å®Œæ•´çš„äº¤æ˜“æ•°æ®
 * - ä¼ æ’­å…ƒä¿¡æ¯ï¼šå‘é€è€…ã€æ—¶é—´æˆ³ã€è·³æ•°ç­‰
 * - ç­¾åéªŒè¯ï¼šé˜²æ­¢æ¶ˆæ¯åœ¨ä¼ æ’­è¿‡ç¨‹ä¸­è¢«ç¯¡æ”¹
 * - å»é‡æ ‡è¯†ï¼šæ¥æ”¶ç«¯å¿«é€Ÿå»é‡çš„å…³é”®ä¿¡æ¯
 *
 * ğŸ“ ä½¿ç”¨ç¤ºä¾‹ï¼š
 * transaction_announcement {
 *   message_id: "announce_001"
 *   transaction_hash: sha256(transaction)
 *   transaction: {å®Œæ•´çš„äº¤æ˜“æ•°æ®}
 *   timestamp: 1640995200000
 *   sender_peer_id: "QmXXXXX..."
 *   propagation_hop: 1
 *   signature: å‘é€è€…ç­¾å
 * }
 *
 * ğŸš¦ å¤„ç†é€»è¾‘ï¼š
 * 1. æ¥æ”¶ç«¯æ£€æŸ¥transaction_hashæ˜¯å¦å·²å­˜åœ¨äºæœ¬åœ°mempool
 * 2. å¦‚ä¸å­˜åœ¨ï¼ŒéªŒè¯äº¤æ˜“æœ‰æ•ˆæ€§å¹¶åŠ å…¥æœ¬åœ°mempool
 * 3. ç»§ç»­å‘ä¸´è¿‘èŠ‚ç‚¹ä¼ æ’­ï¼ˆhopé€’å¢ï¼Œç›´åˆ°è¾¾åˆ°é™åˆ¶ï¼‰
 * 4. å¦‚å·²å­˜åœ¨ï¼Œç›´æ¥ä¸¢å¼ƒï¼ˆå»é‡å¤„ç†ï¼‰
 */
message TransactionAnnouncement {
  string message_id = 1;                          // æ¶ˆæ¯å”¯ä¸€æ ‡è¯†ç¬¦
  bytes transaction_hash = 2;                     // äº¤æ˜“å“ˆå¸Œï¼ˆ32å­—èŠ‚SHA-256ï¼‰
  pb.blockchain.core.Transaction transaction = 3; // å®Œæ•´çš„äº¤æ˜“æ•°æ®
  uint64 timestamp = 4;                          // æ¶ˆæ¯åˆ›å»ºæ—¶é—´æˆ³ï¼ˆUnixæ¯«ç§’ï¼‰
  bytes sender_peer_id = 5;                      // å‘é€è€…èŠ‚ç‚¹ID
  uint32 propagation_hop = 6;                    // ä¼ æ’­è·³æ•°ï¼ˆé˜²å¾ªç¯ï¼Œæœ€å¤§å€¼å¦‚16ï¼‰
}

/**
 * TransactionPropagationRequest - äº¤æ˜“ç›´è¿ä¼ æ’­è¯·æ±‚
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šé€šè¿‡Direct Streamç¡®ä¿äº¤æ˜“å¯é é€è¾¾
 *
 * ğŸ”— ä¼ æ’­æœºåˆ¶ï¼š
 * - ä¼ æ’­æ–¹å¼ï¼šStream RPCï¼Œç‚¹å¯¹ç‚¹å¯é ä¼ è¾“
 * - åè®®IDï¼š/weisyn/transaction/direct/1.0.0
 * - ç›®æ ‡é€‰æ‹©ï¼šåŸºäºK-bucketçš„è¿‘é‚»èŠ‚ç‚¹é€‰æ‹©ï¼ˆ2-3ä¸ªèŠ‚ç‚¹ï¼‰
 * - ç¡®è®¤æœºåˆ¶ï¼šè¦æ±‚æ¥æ”¶ç«¯æ˜ç¡®ç¡®è®¤æ¥æ”¶ç»“æœ
 *
 * ğŸ¯ ä½¿ç”¨åœºæ™¯ï¼š
 * - GossipSubä¼ æ’­å¤±è´¥æ—¶çš„å¤‡ç”¨æ–¹æ¡ˆ
 * - é«˜ä»·å€¼äº¤æ˜“çš„é¢å¤–ä¼ æ’­ä¿éšœ
 * - ç½‘ç»œåˆ†åŒºæ—¶çš„è·¨åˆ†åŒºä¼ æ’­
 * - æ–°èŠ‚ç‚¹å¿«é€ŸåŒæ­¥æœ€æ–°äº¤æ˜“
 *
 * ğŸ“ ä½¿ç”¨ç¤ºä¾‹ï¼š
 * transaction_propagation_request {
 *   request_id: "direct_req_001"
 *   tx_hashes: [hash1, hash2, hash3]
 *   requester_peer_id: "QmYYYYY..."
 *   timestamp: 1640995200000
 *   propagation_reason: "gossip_backup"
 * }
 *
 * ğŸ”„ è¯·æ±‚-å“åº”æµç¨‹ï¼š
 * 1. è¯·æ±‚æ–¹é€‰æ‹©K-bucketä¸­çš„2-3ä¸ªè¿‘é‚»èŠ‚ç‚¹
 * 2. å‘é€TransactionPropagationRequestï¼ŒåŒ…å«äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
 * 3. æ¥æ”¶æ–¹æ£€æŸ¥å“ªäº›äº¤æ˜“å°šæœªå¤„ç†ï¼Œè¿”å›éœ€è¦çš„äº¤æ˜“å“ˆå¸Œ
 * 4. è¯·æ±‚æ–¹å‘é€å®Œæ•´çš„äº¤æ˜“æ•°æ®
 * 5. æ¥æ”¶æ–¹éªŒè¯å¹¶ç¡®è®¤æ¥æ”¶ç»“æœ
 */
message TransactionPropagationRequest {
  string request_id = 1;                         // è¯·æ±‚å”¯ä¸€æ ‡è¯†ç¬¦
  repeated bytes tx_hashes = 2;                  // è¯·æ±‚çš„äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
  bytes requester_peer_id = 3;                  // è¯·æ±‚è€…èŠ‚ç‚¹ID
  uint64 timestamp = 4;                         // è¯·æ±‚æ—¶é—´æˆ³ï¼ˆUnixæ¯«ç§’ï¼‰
}

/**
 * TransactionPropagationResponse - äº¤æ˜“ç›´è¿ä¼ æ’­å“åº”
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šç¡®è®¤äº¤æ˜“ä¼ æ’­çš„å¤„ç†ç»“æœ
 *
 * ğŸ“Š å“åº”ä¿¡æ¯ï¼š
 * - å¤„ç†ç»“æœï¼šæˆåŠŸã€å¤±è´¥ã€éƒ¨åˆ†æˆåŠŸ
 * - è¯¦ç»†çŠ¶æ€ï¼šæ¯ç¬”äº¤æ˜“çš„å¤„ç†çŠ¶æ€
 * - é”™è¯¯ä¿¡æ¯ï¼šå¤±è´¥åŸå› å’Œå»ºè®®å¤„ç†æ–¹å¼
 * - æ€§èƒ½æŒ‡æ ‡ï¼šå¤„ç†æ—¶é—´ã€ç½‘ç»œçŠ¶å†µç­‰
 *
 * ğŸ”„ çŠ¶æ€åˆ†ç±»ï¼š
 * - ACCEPTEDï¼šäº¤æ˜“å·²æ¥å—å¹¶åŠ å…¥å†…å­˜æ± 
 * - DUPLICATEï¼šäº¤æ˜“é‡å¤ï¼Œå·²åœ¨å†…å­˜æ± ä¸­
 * - REJECTEDï¼šäº¤æ˜“è¢«æ‹’ç»ï¼ˆéªŒè¯å¤±è´¥ã€è´¹ç”¨ä¸è¶³ç­‰ï¼‰
 * - PENDINGï¼šäº¤æ˜“å¾…å¤„ç†ï¼ˆèµ„æºä¸è¶³ã€é˜Ÿåˆ—æ»¡ç­‰ï¼‰
 * - UNKNOWNï¼šæœªçŸ¥çŠ¶æ€ï¼ˆç³»ç»Ÿé”™è¯¯ç­‰ï¼‰
 *
 * ğŸ“ ä½¿ç”¨ç¤ºä¾‹ï¼š
 * transaction_propagation_response {
 *   request_id: "direct_req_001"
 *   transactions: [
 *     {hash: hash1, status: ACCEPTED},
 *     {hash: hash2, status: DUPLICATE},
 *     {hash: hash3, status: REJECTED, error: "insufficient_fee"}
 *   ]
 *   success: false  // éƒ¨åˆ†æˆåŠŸ
 *   error_message: "2 of 3 transactions processed successfully"
 * }
 */
message TransactionPropagationResponse {
  string request_id = 1;                         // å¯¹åº”è¯·æ±‚ID
  repeated TransactionStatus transactions = 2;    // é€ç¬”äº¤æ˜“å¤„ç†çŠ¶æ€
  bool success = 3;                              // æ•´ä½“å¤„ç†ç»“æœ
  optional string error_message = 4;             // é”™è¯¯ä¿¡æ¯ï¼ˆå¤±è´¥æ—¶ï¼‰

  message TransactionStatus {
    bytes tx_hash = 1;                           // äº¤æ˜“å“ˆå¸Œ
    TransactionProcessingStatus status = 2;       // å¤„ç†çŠ¶æ€

    enum TransactionProcessingStatus {
      STATUS_UNKNOWN = 0;                        // æœªçŸ¥çŠ¶æ€
      STATUS_ACCEPTED = 1;                       // å·²æ¥å—
      STATUS_DUPLICATE = 2;                      // é‡å¤äº¤æ˜“
      STATUS_REJECTED = 3;                       // å·²æ‹’ç»
    }
  }
}

