// Package utxo æä¾›WESåŒºå—é“¾UTXOæ•°æ®ä»“å‚¨æœåŠ¡çš„å®ç°
//
// ğŸ’ **UTXOæ•°æ®ç®¡ç†å™¨ (UTXO Manager)**
//
// æœ¬æ–‡ä»¶å®ç°äº†UTXOæ•°æ®ä»“å‚¨æœåŠ¡ï¼Œä¸“æ³¨äºï¼š
// - UTXOæŸ¥è¯¢æ“ä½œï¼šç²¾ç¡®æŸ¥è¯¢å’Œåœ°å€èšåˆæŸ¥è¯¢
// - å¼•ç”¨ç®¡ç†æ“ä½œï¼šResourceUTXOçš„å¹¶å‘å¼•ç”¨æ§åˆ¶
// - çŠ¶æ€ç®¡ç†ï¼šUTXOç”Ÿå‘½å‘¨æœŸçŠ¶æ€è½¬æ¢å’Œçº¦æŸæ£€æŸ¥
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**
// - æ•°æ®æºå¤´çº¦æŸï¼šæ‰€æœ‰UTXOæ•°æ®æ¥æºäºTxOutputï¼Œé€šè¿‡åŒºå—å¤„ç†ç»Ÿä¸€å†™å…¥
// - ä¾èµ–æ³¨å…¥ï¼šé€šè¿‡æ„é€ å‡½æ•°æ³¨å…¥æ‰€éœ€ä¾èµ–
// - èŒè´£åˆ†ç¦»ï¼šå°†æŸ¥è¯¢å’Œå¼•ç”¨ç®¡ç†æ“ä½œåˆ†æ•£åˆ°ä¸“é—¨æ–‡ä»¶
// - ä¸šåŠ¡å¯¼å‘ï¼šåŸºäºå®é™…ä¸šåŠ¡éœ€æ±‚ç²¾ç®€è®¾è®¡ï¼Œä¸“æ³¨æ ¸å¿ƒåœºæ™¯
package utxo

import (
	"context"
	"fmt"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"

	// protobufå®šä¹‰
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"

	// å†…éƒ¨æ¥å£
	"github.com/weisyn/v1/internal/core/repositories/interfaces"
)

// ============================================================================
//                              æœåŠ¡ç»“æ„å®šä¹‰
// ============================================================================

// Manager UTXOæ•°æ®ç®¡ç†å™¨
//
// ğŸ¯ **ç»Ÿä¸€UTXOæ•°æ®æœåŠ¡å…¥å£**
//
// è´Ÿè´£å®ç° UTXOManager çš„æ‰€æœ‰å…¬å…±æ¥å£æ–¹æ³•ï¼Œå¹¶å°†å…·ä½“å®ç°
// å§”æ‰˜ç»™ä¸“é—¨çš„å­æ–‡ä»¶å¤„ç†ã€‚éµå¾ªæ•°æ®æºå¤´çº¦æŸåŸåˆ™ï¼Œç¡®ä¿æ•°æ®ä¸€è‡´æ€§ã€‚
//
// æ¶æ„ç‰¹ç‚¹ï¼š
// - ç»Ÿä¸€å…¥å£ï¼šæ‰€æœ‰UTXOæ•°æ®æ“ä½œçš„ç»Ÿä¸€è®¿é—®ç‚¹
// - ä¾èµ–æ³¨å…¥ï¼šé€šè¿‡æ„é€ å‡½æ•°æ³¨å…¥å¿…éœ€çš„å­˜å‚¨ä¾èµ–
// - å§”æ‰˜å®ç°ï¼šå°†å…·ä½“ä¸šåŠ¡é€»è¾‘å§”æ‰˜ç»™ä¸“é—¨çš„å­æ–‡ä»¶
// - å¹¶å‘å®‰å…¨ï¼šResourceUTXOå¼•ç”¨è®¡æ•°ç®¡ç†ï¼Œé˜²æ­¢å¹¶å‘å†²çª
type Manager struct {
	// æ ¸å¿ƒä¾èµ–
	logger            log.Logger               // æ—¥å¿—æœåŠ¡
	badgerStore       storage.BadgerStore      // æŒä¹…åŒ–å­˜å‚¨
	memoryStore       storage.MemoryStore      // å†…å­˜ç¼“å­˜
	hashManager       crypto.HashManager       // å“ˆå¸Œè®¡ç®—æœåŠ¡
	merkleTreeManager crypto.MerkleTreeManager // Merkleæ ‘ç®¡ç†æœåŠ¡

	// å†…éƒ¨æœåŠ¡æ¥å£
	utxoService interfaces.InternalUTXOManager // UTXOå†…éƒ¨æœåŠ¡æ¥å£
}

// ============================================================================
//                              æ„é€ å‡½æ•°
// ============================================================================

// NewManager åˆ›å»ºUTXOæ•°æ®ç®¡ç†å™¨å®ä¾‹
//
// ğŸ—ï¸ **æ„é€ å™¨æ¨¡å¼**
//
// å‚æ•°ï¼š
//
//	logger: æ—¥å¿—æœåŠ¡
//	badgerStore: æŒä¹…åŒ–å­˜å‚¨
//	memoryStore: å†…å­˜ç¼“å­˜
//	hashManager: å“ˆå¸Œè®¡ç®—æœåŠ¡
//	merkleTreeManager: Merkleæ ‘ç®¡ç†æœåŠ¡
//
// è¿”å›ï¼š
//
//	*Manager: UTXOæ•°æ®ç®¡ç†å™¨å®ä¾‹
//	error: åˆ›å»ºé”™è¯¯
func NewManager(
	logger log.Logger,
	badgerStore storage.BadgerStore,
	memoryStore storage.MemoryStore,
	hashManager crypto.HashManager,
	merkleTreeManager crypto.MerkleTreeManager,
) (*Manager, error) {
	if badgerStore == nil {
		return nil, fmt.Errorf("badger store ä¸èƒ½ä¸ºç©º")
	}
	if hashManager == nil {
		return nil, fmt.Errorf("hash manager ä¸èƒ½ä¸ºç©º")
	}
	if merkleTreeManager == nil {
		return nil, fmt.Errorf("merkle tree manager ä¸èƒ½ä¸ºç©º")
	}

	manager := &Manager{
		logger:            logger,
		badgerStore:       badgerStore,
		memoryStore:       memoryStore,
		hashManager:       hashManager,
		merkleTreeManager: merkleTreeManager,
	}

	if logger != nil {
		logger.Debug("UTXOæ•°æ®ç®¡ç†å™¨åˆå§‹åŒ–å®Œæˆ")
	}

	return manager, nil
}

// ============================================================================
//                            ğŸ” æ ¸å¿ƒæŸ¥è¯¢æ¥å£å®ç°
// ============================================================================

// GetUTXO æ ¹æ®OutPointç²¾ç¡®è·å–UTXO
func (m *Manager) GetUTXO(ctx context.Context, outpoint *transaction.OutPoint) (*utxo.UTXO, error) {
	if m.logger != nil {
		m.logger.Debugf("ç²¾ç¡®è·å–UTXO - txId: %x, index: %d", outpoint.TxId, outpoint.OutputIndex)
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (query.go)
	return m.getUTXO(ctx, outpoint)
}

// GetUTXOsByAddress è·å–åœ°å€æ‹¥æœ‰çš„UTXOåˆ—è¡¨
func (m *Manager) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) {
	if m.logger != nil {
		m.logger.Debugf("è·å–åœ°å€UTXOåˆ—è¡¨ - address: %x, onlyAvailable: %t", address, onlyAvailable)
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (query.go)
	return m.getUTXOsByAddress(ctx, address, category, onlyAvailable)
}

// ============================================================================
//                           ğŸ”„ æ ¸å¿ƒçŠ¶æ€æ“ä½œå®ç°
// ============================================================================

// ReferenceUTXO å¼•ç”¨UTXOï¼ˆå¢åŠ å¼•ç”¨è®¡æ•°ï¼‰
func (m *Manager) ReferenceUTXO(ctx context.Context, outpoint *transaction.OutPoint) error {
	if m.logger != nil {
		m.logger.Debugf("å¼•ç”¨UTXO - txId: %x, index: %d", outpoint.TxId, outpoint.OutputIndex)
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (reference.go)
	return m.referenceUTXO(ctx, outpoint)
}

// UnreferenceUTXO è§£é™¤UTXOå¼•ç”¨ï¼ˆå‡å°‘å¼•ç”¨è®¡æ•°ï¼‰
func (m *Manager) UnreferenceUTXO(ctx context.Context, outpoint *transaction.OutPoint) error {
	if m.logger != nil {
		m.logger.Debugf("è§£é™¤UTXOå¼•ç”¨ - txId: %x, index: %d", outpoint.TxId, outpoint.OutputIndex)
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (reference.go)
	return m.unreferenceUTXO(ctx, outpoint)
}

// ============================================================================
//                           ğŸ“Š çŠ¶æ€æ ¹ç®¡ç†æ¥å£å®ç°
// ============================================================================

// GetCurrentStateRoot è·å–å½“å‰UTXOçŠ¶æ€æ ¹
func (m *Manager) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	if m.logger != nil {
		m.logger.Debug("è·å–å½“å‰UTXOçŠ¶æ€æ ¹")
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (state_root.go)
	return m.getCurrentStateRoot(ctx)
}

// ============================================================================
//                           ğŸ”§ UTXOåˆ›å»ºå’Œç®¡ç†æ“ä½œ
// ============================================================================

// ProcessBlockUTXOs å¤„ç†åŒºå—ä¸­çš„UTXOå˜æ›´ï¼ˆåˆ›å»ºæ–°UTXOï¼Œæ ‡è®°å·²æ¶ˆè´¹UTXOï¼‰
//
// ğŸ¯ **ç”Ÿäº§çº§åˆ«çš„UTXOå¤„ç†**ï¼š
// åœ¨åŒºå—å¤„ç†è¿‡ç¨‹ä¸­è°ƒç”¨ï¼Œè´Ÿè´£ï¼š
// 1. åˆ›å»ºåŒºå—ä¸­æ‰€æœ‰äº¤æ˜“è¾“å‡ºå¯¹åº”çš„æ–°UTXO
// 2. æ ‡è®°åŒºå—ä¸­æ‰€æœ‰äº¤æ˜“è¾“å…¥æ¶ˆè´¹çš„UTXOä¸ºå·²æ¶ˆè´¹çŠ¶æ€
// 3. æ›´æ–°åœ°å€ç´¢å¼•å’Œç±»åˆ«ç´¢å¼•
// 4. æ›´æ–°UTXOçŠ¶æ€æ ¹
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - tx: æ•°æ®åº“äº‹åŠ¡ï¼ˆç¡®ä¿åŸå­æ€§ï¼‰
//   - block: è¦å¤„ç†çš„åŒºå—
//   - blockHash: åŒºå—å“ˆå¸Œ
//   - txHashes: åŒºå—ä¸­æ‰€æœ‰äº¤æ˜“çš„å“ˆå¸Œåˆ—è¡¨
//
// è¿”å›ï¼š
//   - error: å¤„ç†é”™è¯¯
func (m *Manager) ProcessBlockUTXOs(ctx context.Context, tx storage.BadgerTransaction, block *core.Block, blockHash []byte, txHashes [][]byte) error {
	if m.logger != nil {
		m.logger.Debugf("å¤„ç†åŒºå—UTXOå˜æ›´ - height: %d, txCount: %d", block.Header.Height, len(block.Body.Transactions))
	}

	// 1. å¤„ç†æ‰€æœ‰äº¤æ˜“çš„è¾“å…¥ï¼ˆæ ‡è®°UTXOä¸ºå·²æ¶ˆè´¹ï¼‰
	for i, transaction := range block.Body.Transactions {
		if len(transaction.Inputs) > 0 { // è·³è¿‡Coinbaseäº¤æ˜“ï¼ˆåˆ›ä¸–äº¤æ˜“æ²¡æœ‰è¾“å…¥ï¼‰
			for _, input := range transaction.Inputs {
				if err := m.markUTXOAsSpent(ctx, tx, input.PreviousOutput); err != nil {
					return fmt.Errorf("æ ‡è®°UTXOå·²æ¶ˆè´¹å¤±è´¥ (tx %d): %w", i, err)
				}
			}
		}
	}

	// 2. å¤„ç†æ‰€æœ‰äº¤æ˜“çš„è¾“å‡ºï¼ˆåˆ›å»ºæ–°UTXOï¼‰
	for i, transaction := range block.Body.Transactions {
		if len(txHashes) <= i {
			return fmt.Errorf("äº¤æ˜“å“ˆå¸Œåˆ—è¡¨é•¿åº¦ä¸åŒ¹é…")
		}

		txHash := txHashes[i]
		for j, output := range transaction.Outputs {
			if err := m.createUTXO(ctx, tx, txHash, uint32(j), output, block.Header.Height); err != nil {
				return fmt.Errorf("åˆ›å»ºUTXOå¤±è´¥ (tx %d, output %d): %w", i, j, err)
			}
		}
	}

	if m.logger != nil {
		m.logger.Debugf("åŒºå—UTXOå¤„ç†å®Œæˆ - height: %d", block.Header.Height)
	}

	return nil
}
